<resources>
    <string name="app_name" translatable="false">RecIt</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="started_recording">Started recording</string>
    <string name="stopped_recording">Finished recording</string>
    <string name="save_recording">Save Recording</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="items_selected">Item(s) Selected</string>
    <string name="WrongInputMessage">Can only contain letters and/or numbers!</string>
    <string name="defaultName" translatable="false">MyRec</string>
    <string name="SettingAutoLoop">Auto Loop</string>
    <string name="AutoLoopSummaryOn">Auto Looping is Activated</string>
    <string name="AutoLoopSummaryOff">Auto Looping is Deactivated</string>
    <string name="SettingsDuration">Max Recording Duration</string>
    <string name="select_language">Select Language</string>
    <string name="change_text_color">Change Text Color</string>
    <string name="change_file_name">Change File Name:</string>
    <string name="confirm_delete">Are you sure you want to delete the select items?</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog">Delete Items</string>
    <string name="finish">Finish</string>
    <string name="reset">Reset</string>
    <string name="file_exists_toast">This name already exists</string>
    <string-array name="Languages">
        <item>Ελληνικα</item>
        <item>English</item>
    </string-array>
    <string-array name="LanguageValues">
        <item>el</item>
        <item>en</item>
    </string-array>
    <string-array name="maxDuration">
        <item>5sec</item>
        <item>10sec</item>
        <item>15sec</item>
        <item>20sec</item>
    </string-array>
    <string-array name="item_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>